fixed letter spacing

--- a/src/components/job/jobApply/jobApply.module.scss
+++ b/src/components/job/jobApply/jobApply.module.scss
@@ -8,5 +8,5 @@
 
 .btnText {
   font-weight: $font-weight-bold;
-  letter-spacing: -0.6px;
+  letter-spacing: -0.17px;
 }
